--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18"
+    "node": "18.x",
+    "npm": "8.x"
   },
   "dependencies": {
     "@fontsource-variable/quicksand": "^5.1.0",
